# toolbox

./: .gitignore  pyproject.toml  pyrightconfig.json
docs/: configuration.md  index.md  proj-tree.md  toolbox-info.md  yt-mp3.md
src/utils/: clipboard_utils.py  proj_tree.json  proj_tree.py  toolbox_info.py  yt_to_mp3.py
