[project]
name = "toolbox"
version = "0.0.1"

[project.scripts]
toolbox-info = "utils.toolbox_info:main"
proj-tree = "utils.proj_tree:main"
yt-mp3 = "utils.yt_to_mp3:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]